<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".screens.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backtosetting"
            android:layout_width="@dimen/setting_back_btn_width"
            android:layout_height="@dimen/setting_back_btn_height"
            android:layout_gravity="center_vertical"

            android:src="@drawable/setting_left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_title_text_size" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/units"
        android:textSize="@dimen/setting_medium_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature_units"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_standard_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/temperatureSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:entries="@array/gradus"
            android:textSize="@dimen/setting_standard_text_size"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed_units"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_standard_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/windSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:entries="@array/speed"
            android:textSize="@dimen/setting_standard_text_size"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atmospheric_pressure_units"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_standard_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/atmosphericSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:entries="@array/pressure"
            android:textSize="@dimen/setting_standard_text_size"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/textColor" />


</LinearLayout>