<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".screens.SplashActivity">

    <RelativeLayout
        android:id="@+id/splash_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/splash_icon_size"
                android:layout_height="@dimen/splash_icon_size"
                android:src="@drawable/head_icon"
                app:shapeAppearanceOverlay="@style/image_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:textAlignment="center"
                android:textSize="@dimen/splash_text_size"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:text="Sher Software Mobile Group"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_pager_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible">

        <TextView
            android:id="@+id/id_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:text="@string/skip"
            android:textColor="@color/MainColor"
            android:textSize="@dimen/sp_banner_standard_text_size" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/splash_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/banner_indicators"
            android:layout_below="@+id/id_skip" />

        <LinearLayout
            android:id="@+id/banner_indicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/start_btn"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/id_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/start_btn"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textColor="@color/MainColor"
            android:textSize="@dimen/sp_banner_standard_text_size" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="@dimen/sp_start_btn_margin_top"
            android:layout_marginBottom="@dimen/sp_start_btn_margin_bottom"
            android:backgroundTint="@color/MainColor"
            android:paddingVertical="@dimen/sp_start_btn_padding_vertical"
            android:text="@string/start"
            android:textColor="@color/white"
            android:visibility="visible" />
    </RelativeLayout>


</RelativeLayout>