<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    tools:context=".screens.MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mainUpdateDatarefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/top_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/back_button"
                        android:layout_width="@dimen/btn_standard_size"
                        android:layout_height="@dimen/btn_standard_size"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/back_white_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/city_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"

                            android:textColor="@color/white"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/updated_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_update"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp"
                            android:text="@string/successfully_updated"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/main_small_text_size" />

                    </LinearLayout>


                    <ImageView
                        android:id="@+id/setting"
                        android:layout_width="@dimen/main_setting_btn_size"
                        android:layout_height="@dimen/main_setting_btn_size"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/setting_white_icon" />

                </RelativeLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_menu"
                    android:fillViewport="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:id="@+id/temprature_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="center"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tempurature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:shadowColor="@color/black"
                                android:shadowDx="-2"
                                android:shadowDy="-2"
                                android:shadowRadius="2"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/main_current_temp_text_size"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/measureTemp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="15dp"
                                android:gravity="top"
                                android:shadowColor="@color/black"
                                android:shadowDx="-2"
                                android:shadowDy="-2"
                                android:shadowRadius="2"
                                android:text="@string/c"
                                android:textColor="@color/white"
                                android:textSize="@dimen/main_current_measure_text_size"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/temp_descp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/temprature_container"
                            android:layout_centerHorizontal="true"
                            android:shadowColor="@color/black"
                            android:shadowDx="-2"
                            android:shadowDy="-2"
                            android:shadowRadius="2"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/main_current_temp_desc_text_size" />

                        <LinearLayout
                            android:id="@+id/humidity_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/temp_descp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/bg_update"
                            android:orientation="horizontal"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp">

                            <ImageView
                                android:layout_width="@dimen/btn_standard_size"
                                android:layout_height="@dimen/btn_standard_size"
                                android:padding="2dp"
                                android:src="@drawable/humidity" />


                            <TextView
                                android:id="@+id/humidity_item"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/main_small_text_size" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/today_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/humidity_container"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/main_date_text_size"
                            android:textStyle="italic" />

                        <GridView
                            android:id="@+id/currentDataView"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/main_grid_height"
                            android:layout_below="@id/today_date"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="16dp"
                            android:background="@drawable/bg_update"
                            android:horizontalSpacing="6dp"
                            android:numColumns="2"
                            android:padding="16dp"
                            android:scrollbars="none"
                            android:verticalSpacing="6dp"
                            tools:listitem="@layout/current_day_values_layout" />

                        <TextView
                            android:id="@+id/three_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/currentDataView"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/weather_for_three_days"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/main_date_text_size"
                            android:textStyle="italic" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/daily_temp_rc_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/three_days"
                            android:layout_marginHorizontal="16dp"
                            android:background="@drawable/bg_update"
                            android:paddingVertical="5dp"
                            android:paddingStart="8dp"
                            android:scrollbars="none"
                            tools:ignore="RtlSymmetry"
                            tools:listitem="@layout/daily_temp_row" />

                        <RelativeLayout
                            android:id="@+id/aqi_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/daily_temp_rc_view"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/bg_update"
                            android:paddingHorizontal="16dp"
                            android:paddingTop="8dp">

                            <TextView
                                android:id="@+id/aqi_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/air_quality_index"
                                android:textSize="@dimen/main_small_text_size"

                                android:textColor="@color/textColor" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/aqi_text"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/aqi_icon"
                                    android:layout_width="@dimen/btn_standard_size"
                                    android:layout_height="@dimen/btn_standard_size"
                                    android:src="@drawable/leaf_aqi" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/aqi"
                                    android:textColor="@color/textColor"
                                    android:textSize="@dimen/main_small_text_size"
                                    />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/aqi_link_container"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:gravity="center_vertical"

                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/aqi_link"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/main_small_text_size"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/full_air_quality_forecast"
                                    android:textColor="#FFFFFF" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="1dp"
                                    android:textSize="@dimen/main_small_text_size"
                                    android:src="@drawable/right_arrow" />
                            </LinearLayout>


                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/data_provided"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/aqi_container"
                            android:layout_marginBottom="16dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data_provided_in_party_by"
                                android:textColor="#737373"
                                android:textSize="@dimen/main_small_text_size"
                                />

                            <TextView
                                android:id="@+id/link_openMapWeather"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/open_weather"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/main_small_text_size"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </RelativeLayout>

                </androidx.core.widget.NestedScrollView>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/internet_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#02283f"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/no_network_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="24dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/internet_text_title_size" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/no_network_message"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"

                    app:lottie_rawRes="@raw/no_internet_connection" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>